// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic renders checked checkbox 1`] = `
<Checkbox
  checked={true}
  id="hello"
  label="Hello!"
  name="greeting"
  onChange={[Function]}
  value="hello"
/>
`;

exports[`Checkbox basic renders unchecked checkbox 1`] = `
<Checkbox
  checked={false}
  id="hello"
  label="Hello!"
  name="greeting"
  onChange={[Function]}
  value="hello"
/>
`;
